--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,7 @@ android {
 
     defaultConfig {
         applicationId "com.tour_guide_app"
+        multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
@@ -137,6 +138,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-tts')
     compile project(':react-native-amap3d')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
