--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-speech-iflytek')
     compile project(':react-native-tts')
     compile project(':react-native-amap3d')
     compile fileTree(dir: "libs", include: ["*.jar"])
