--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.55.3",
     "react-native-amap3d": "^1.0.0-beta.1",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-speech-iflytek": "^1.0.3",
     "react-native-tts": "^1.5.0",
     "react-navigation": "^1.5.11"
   },
