--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'Tour_Guide_APP'
+include ':react-native-image-picker'
+project(':react-native-image-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-image-picker/android')
 include ':react-native-speech-iflytek'
 project(':react-native-speech-iflytek').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-speech-iflytek/android')
 include ':react-native-tts'
