--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "16.3.1",
     "react-native": "0.55.3",
     "react-native-amap3d": "^1.0.0-beta.1",
+    "react-native-awesome-alerts": "^1.0.7",
     "react-native-image-picker": "^0.26.7",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-popup-dialog": "^0.11.46",
     "react-native-speech-iflytek": "^1.0.3",
     "react-native-tts": "^1.5.0",
     "react-navigation": "^1.5.11"
