--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-popup-dialog": "^0.11.46",
     "react-native-speech-iflytek": "^1.0.3",
     "react-native-tts": "^1.5.0",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.5.11"
   },
   "devDependencies": {
