--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,17 +39,13 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-      <meta-data android:name="com.baidu.lbsapi.API_KEI"
+      <meta-data android:name="com.baidu.lbsapi.API_KEY"
                  android:value="Yk87phEBwxPOAyYx7WdEooBkV4NKwTjY" />
 
       <meta-data android:name="com.amap.api.v2.apikey"
                  android:value="94d8072322d83dee0197d64c1e8a7734" />
+      <!--meta-data android:name="com.baidu.lbsapi.API_KEI"
+                 android:value="Yk87phEBwxPOAyYx7WdEooBkV4NKwTjY" /-->
     </application>
-
-    <!--application>
-        <meta-data
-            android:name="com.baidu.lbsapi.API_KEI"
-            android:value="8KP4kuD2mGGDWfBx4YByLMBHAoEETptg" />
-    </application-->
 
 </manifest>
