--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.55.3",
     "react-native-amap3d": "^1.0.0-beta.1",
     "react-native-awesome-alerts": "^1.0.7",
+    "react-native-baidumap-sdk": "^0.5.4",
     "react-native-image-picker": "^0.26.7",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-popup-dialog": "^0.11.46",
