--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-native-awesome-alerts": "^1.0.7",
     "react-native-baidumap-sdk": "^0.5.4",
     "react-native-image-picker": "^0.26.7",
+    "react-native-markdown": "^0.1.1",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-popup-dialog": "^0.11.46",
+    "react-native-simple-markdown": "^1.1.0",
     "react-native-speech-iflytek": "^1.0.3",
     "react-native-storage": "^0.2.2",
     "react-native-tts": "^1.5.0",
